--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "expo": "~52.0.23",
+    "expo-cli": "^6.3.10",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-paper": "^5.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
