--- a/package.json
+++ b/package.json
@@ -3,22 +3,31 @@
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "npx expo start",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web",
+    "lint": "eslint \"**/*.{js,jsx}\""
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.25.9",
+    "@expo/metro-config": "^0.17.6",
+    "eslint-plugin-react": "^7.37.3",
     "expo": "~52.0.23",
     "expo-cli": "^6.3.10",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-paper": "^5.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native/eslint-config": "^0.76.5",
+    "eslint": "^9.17.0",
+    "prettier": "^3.4.2"
   },
   "private": true
 }
