--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.25.9",
-    "@expo/metro-config": "^0.17.6",
+    "@expo/metro-config": "~0.19.0",
     "eslint-plugin-react": "^7.37.3",
     "expo": "~52.0.23",
     "expo-cli": "^6.3.10",
@@ -24,7 +24,7 @@
     "react-native-paper": "^5.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@react-native/eslint-config": "^0.76.5",
     "eslint": "^9.17.0",
     "prettier": "^3.4.2"
