--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-paper": "^5.12.5"
+    "react-native-paper": "^5.12.5",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
