--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.25.9",
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
     "@expo/metro-config": "~0.19.0",
     "eslint-plugin-react": "^7.37.3",
     "expo": "~52.0.23",
     "expo-cli": "^6.3.10",
+    "expo-font": "~13.0.2",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
