--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-paper": "^5.12.5",
+    "react-native-svg": "^15.10.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
