--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
     "@expo/metro-config": "~0.19.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
     "eslint-plugin-react": "^7.37.3",
     "expo": "~52.0.23",
     "expo-cli": "^6.3.10",
@@ -25,6 +27,8 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.10.1",
     "styled-components": "^6.1.13"
   },
