--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "android": "npx expo start --android",
     "ios": "npx expo start --ios",
     "web": "npx expo start --web",
-    "lint": "eslint \"**/*.{js,jsx}\""
+    "lint": "eslint \"**/*.{js,jsx,json}\""
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.25.9",
@@ -18,8 +18,9 @@
     "@expo/metro-config": "~0.19.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "camelize": "^1.0.1",
     "eslint-plugin-react": "^7.37.3",
-    "expo": "~52.0.23",
+    "expo": "^52.0.23",
     "expo-cli": "^6.3.10",
     "expo-font": "~13.0.2",
     "expo-status-bar": "~2.0.0",
@@ -29,7 +30,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.10.1",
+    "react-native-svg": "15.8.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
