--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/metro-config": "~0.19.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "camelize": "^1.0.1",
     "eslint-plugin-react": "^7.37.3",
     "expo": "^52.0.23",
