--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~13.0.2",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.1.0",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
